W2.Parser/alt/test/invalid/invalid4.c
//NOT ERROR FREE - This test case includes an error in which the declaration is wrong
#include <stdio.h>

int main()
{
	int @ a;
	printf("Hello");
	return 0;
}
	